[tool.poetry]
name = "hazard-exposure-tool"  # Change this to match your actual project name
version = "0.1.0"
description = "A Streamlit-based hazard exposure tool"
authors = ["ediakatos <ediakatos@mapaction.org>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{ include = "src" }]  # Add this line to tell Poetry where your code is

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
rasterio = "^1.4.3"
xarray = "^2025.1.2"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
sentinelhub = "^3.11.1"
folium = "^0.19.4"
pystac-client = "^0.8.5"
planetary-computer = "^1.0.0"
fiona = "^1.10.1"
numpy = "<2"
rioxarray = "^0.18.2"
rasterstats = "^0.20.0"
streamlit = "^1.43.0"
plotly = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pymarkdownlnt = "^0.9.23"
pytest = "^8.3.3"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
fix = true
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "S101", "ANN201", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"
